modified readme and html

--- a/index.html
+++ b/index.html
@@ -95,42 +95,39 @@
         <!-- banner-social-icons -->
         <ul class="banner-social-icons d-inline-block">
         <li class="facebook d-inline-block">
-        <a href="https://www.facebook.com/CypheriumChain/" target="_blank">
+        <a href="" target="_blank">
             <i class="fa-brands fa-facebook" style="color: #e2e5e9;"></i>
         </a>
         </li>
         <li class="twitter d-inline-block">
-        <a href="https://twitter.com/cypheriumchain" target="_blank">
+        <a href="" target="_blank">
         <i class="fa-brands fa-twitter" style="color: #e2e5e9;"></i>
         </a>
         </li>
         <li class="github d-inline-block">
-        <a href="https://github.com/cypherium" target="_blank">
+        <a href="" target="_blank">
         <i class="fa-brands fa-github" style="color: #e2e5e9;"></i>
         </a>
         </li>
         <li class="telegram d-inline-block">
-        <a href="https://t.me/cypherium_supergroup" target="_blank">
+        <a href="" target="_blank">
         <i class="fa-brands fa-telegram-plane" style="color: #e2e5e9;"></i>
         </a>
         </li>
         <li class="reddit d-inline-block">
-        <a href="https://www.reddit.com/r/Cypherium/" target="_blank">
+        <a href="" target="_blank">
         <i class="fa-brands fa-reddit-alien" style="color: #e2e5e9;"></i>
         </a>
         </li>
         <li class="linkedin d-inline-block">
-        <a href="https://www.linkedin.com/company/cypherium/" target="_blank">
+        <a href="" target="_blank">
         <i class="fa-brands fa-linkedin-in" style="color: #e2e5e9;"></i>
         </a>
         </li>
         </ul>
-        <!-- banner-social-icons -->
-        </div>
-        <!-- homebanner-additional-item -->
         </div>
         </div>
-        <!-- homebanner-additional -->
+        </div>
         </div>
         </div>
 </section>
